@@ -1,3 +1,8 @@
+2020-07-23  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/ball/upnp/ssdp/SSDPDiscoveryService.java:
+	Added DatagramSocket parameter to Listener methods.
+
 2020-07-22  Allen D. Ball  <ball@hcf.dev>
 
 	* Added SSDPDiscoveryResponse, SSDPNotifyAliveRequest, and
